# embedded-cli

lib/: CMakeLists.txt
lib/src/: embedded_cli.c
tests/: CMakeLists.txt  CliTestRunner.cpp
